data/derived/sp14/progs/unify/prog1429.ml.out
Characters 32-40:
  let stringOfList f l = failwith List.map sepConcat f l;;
                                  ^^^^^^^^
Error: This expression has type ('a -> 'b) -> 'a list -> 'b list
       but an expression was expected of type string
